<resources>
    <!-- Main -->

    <string name="app_name">Uber Report</string>
    <string name="btn_text_planejarcorrida">Planejar sua corrida!</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="campo_nome">Digite seu nome</string>

    <!-- Strings -->
    <string name="et_atual"> Digite sua localização atual... </string>
    <string name="et_destino"> Digite seu endereço de destino... </string>
    <string name="textoEnderecoDestino">Digite o endereço de destino...</string>
    <string name="seu_nome">Seu nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="email">E-mail</string>
    <string name="criar_sua_senha">Criar sua senha</string>
    <string name="telefone">Telefone</string>
    <string name="confirme_sua_senha">Confirme sua senha</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="cpf">CPF</string>
    <string name="cnh">CNH</string>
    <string name="continuar">Continuar</string>
    <string name="crie_uma_conta_rapidamente">Crie uma conta rapidamente!</string>
    <string name="validade_cnh">Validade CNH</string>
    <string name="seu_nome_passageiro">Seu nome</string>
    <string name="sobrenome_passageiro">Sobrenome</string>
    <string name="email_passageiro">E-mail</string>
    <string name="digite_sua_senha_passageiro">Digite sua senha</string>
    <string name="criar_sua_senha_passageiro">Criar sua senha</string>
    <string name="cpf_passageiro">CPF</string>
    <string name="confirme_sua_senha_passageiro">Confirme sua senha</string>
    <string name="telefone_passageiro">Telefone</string>
    <string name="continuar_passageiro">Continuar</string>
    <string name="crie_uma_conta_rapidamente_passageiro">Crie uma conta rapidamente!</string>
    <string name="fa_a_login_para_acessar_sua_conta">Faça login para acessar sua conta!</string>
    <string name="imagem_de_motorista_e_passageiro">Imagem de motorista e passageiro</string>
    <string name="motorista">Motorista</string>
    <string name="passageiro">Passageiro</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="como_deseja_acessar">Como deseja acessar?</string>
    <string name="entrar_na_sua_conta">Entrar na sua conta</string>
    <string name="criar_conta">Criar conta</string>
    <string name="logoformaentrada">logoFormaEntrada</string>
    <string name="imagempassageiro">imagemPassageiro</string>
    <string name="imgusuariosilva">imgUsuarioSilva</string>
    <string name="usu_rio_da_silva">Usuário da Silva</string>
    <string name="usu_rio_nome">Usuário (nome)</string>
    <string name="_11_1411_telefone">(11) *****-1411 (telefone)</string>
    <string name="_5_9_1_70_cpf">5*9*1****/70 (CPF)</string>
    <string name="usuariodasilva_gmail_com_e_mail">usuariodasilva@gmail.com (e-mail)</string>
    <string name="da_silva_sobrenome">Da Silva (Sobrenome)</string>
    <string name="caixaentradaemail">CaixaEntradaEmail</string>
    <string name="caixaentradasenha">CaixaEntradaSenha</string>
    <string name="digite_sua_senha_login_passageiro">Digite sua senha:</string>
    <string name="esqueceu_a_senha_clique_aqui">Esqueceu a senha? Clique aqui</string>
    <string name="nome_exemplo_com">nome@exemplo.com</string>
    <string name="digite_seu_e_mail">Digite seu e-mail:</string>
    <string name="informar_senha">*********</string>
    <string name="entre_em_sua_conta_com_seus_dados">Entre em sua conta com seus dados!</string>
    <string name="continuar_login_passageiro">Continuar</string>
    <string name="uberreportlogo">UberReportLogo</string>
    <string name="bot_o_de_alerta">Botão de alerta</string>
    <string name="todo3">TODO</string>
    <string name="para_onde_vamos">Para onde vamos?</string>
    <string name="bot_o_de_voltar">Botão de voltar</string>
    <string name="reportar_um_evento">Reportar um evento</string>
    <string name="bot_o_clima">Botão Clima</string>
    <string name="clima_adverso">Clima adverso</string>
    <string name="bot_o_acidentes">Botão Acidentes</string>
    <string name="acidentes">Acidentes</string>
    <string name="bot_o_crimes">Botão Crimes</string>
    <string name="crimes">Crimes</string>
    <string name="climaadverso">ClimaAdverso</string>
    <string name="alagamento">Alagamento</string>
    <string name="climaadversoimgbtn">ClimaAdverso</string>
    <string name="deslizamento">Deslizamento</string>
    <string name="climaadversoimgbtn2">ClimaAdverso</string>
    <string name="temporal">Temporal</string>
    <string name="acidentesimgbtn">Acidentes</string>
    <string name="acidente_de_carros">Acidente de carros</string>
    <string name="acidentes2">Acidentes</string>
    <string name="acidente_com_pedestres">Acidente com pedestres</string>
    <string name="crime">Crime</string>
    <string name="assalto">Assalto</string>
    <string name="crimeimgbtn">Crime</string>
    <string name="tiroteiro">Tiroteiro</string>
    <string name="crimeimgbtn2">Crime</string>
    <string name="arrast_o">Arrastão</string>
    <string name="cancelar">Cancelar</string>
    <string name="continuarbtnprocurarcorrida">Continuar</string>
    <string name="procurar_corrida">PROCURAR CORRIDA</string>
    <string name="marcadorloc">marcadorloc</string>
    <string name="motorista_da_silva">Motorista da Silva</string>
    <string name="cnhinformacoes">*********** (CNH)</string>
    <string name="_12_12_0000_validade_cnh">12/12/0000 (Validade CNH)</string>
    <string name="centralizar">Botão para centralizar o mapa</string>
    <string name="aceito">Aceito</string>
    <string name="esqueceu_a_senha">Esqueceu a senha</string>
    <string name="insira_o_email_para_redefinir_a_senha">Insira o email para redefinir a senha</string>
    <string name="digite_seu_email">Digite seu email:</string>
    <string name="pr_ximo">Próximo</string>
    <string name="insira_o_c_digo">Insira o Código</string>
    <string name="foi_enviado_um_c_digo_para_o_seu_e_mail_insira_o">Foi enviado um código para o seu e-mail</string>
    <string name="verificar">Verificar</string>
    <string name="a_nova_senha_deve_ser_diferente_da_antiga">A nova senha deve ser diferente da antiga</string>
    <string name="digite_sua_nova_senha">Digite sua nova senha</string>
    <string name="confirme_sua_nova_senha">Confirme sua nova senha</string>
    <string name="adicionar_contato_de_emerg_ncia">Adicionar contato de emergência:</string>
    <string name="contato_de_emergencia">Contato de emergencia</string>
    <string name="editar_informa_es">Editar informações</string>
    <string name="politicas_privacidade">
        1. Sobre o Uber Report\n\n
O Uber Report é um aplicativo gratuito voltado para motoristas e passageiros da Uber, com foco em monitoramento de segurança em tempo real durante viagens. Por meio do app, os usuários podem visualizar e reportar alertas de risco, como enchentes, assaltos, quedas de árvores e outros perigos em regiões próximas ao trajeto.

        \n
        \n
O aplicativo também permite compartilhamento de localização e envio de mensagens rápidas via WhatsApp para contatos de confiança.
     \n
     \n

2. Coleta, uso e permissões de dados\n\n
O Uber Report não armazena dados pessoais dos usuários em servidores próprios. No entanto, para funcionamento adequado, o app solicita algumas permissões temporárias:
     \n
     \n

📍 Localização: usada para exibir sua posição no mapa e mostrar alertas próximos.\n
🌐 Internet: necessária para carregar mapas, alertas e rotas.\n
📤 WhatsApp: usado apenas para enviar mensagens para contatos de confiança. Nenhum dado é coletado.\n
     \n
3. Compartilhamento de informações
    \n
    \n
O Uber Report não compartilha informações com terceiros. Nenhuma informação pessoal ou de localização é vendida ou utilizada para publicidade.
    \n
    \n
4. Idade mínima
    \n
    \n
O uso do Uber Report é indicado para usuários com 18 anos ou mais, dado o conteúdo e responsabilidades envolvidas no uso dos alertas.
    \n
    \n
5. Segurança
    \n
    \n
O Uber Report é uma ferramenta de apoio e não substitui medidas de segurança pessoal. Não garantimos a prevenção total de incidentes.
    \n
    \n
6. Responsabilidade do usuário
    \n
    \n
Ao utilizar o app, o usuário concorda em:
    \n
    \n
*Utilizar os recursos com responsabilidade.
        \n
*Não enviar alertas falsos ou conteúdo ofensivo.
        \n
*Respeitar os termos de uso de apps integrados, como o WhatsApp.
        \n
        \n
7. Alterações nesta política
        \n
        \n
Esta política pode ser atualizada a qualquer momento. Recomendamos que os usuários revisem esta página periodicamente para se manterem informados.
\n
        \n
8. Contato
        \n
        \n
Em caso de dúvidas, sugestões ou solicitações, entre em contato pelo e-mail:
uber.report.fecap@gmail.com</string>
    <string name="botao_de_voltar">Botão de voltar</string>
    <string name="botao_de_configuracoes">Botão de configurações</string>
    <string name="deletar_conta">Deletar conta</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="bot_o_whatsapp">Botão WhatsApp</string>
    <string name="bot_o_do_peril_do_usu_rio">Botão do peril do usuário</string>
    <string name="whatsapplogo">WhatsAppLogo</string>
    <string name="txt_whatsapp">WhatsApp</string>
</resources>