<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Título -->

    <!-- Layout do formulário -->

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="monospace"
        android:text="@string/crie_uma_conta_rapidamente"
        android:textAlignment="center"
        android:textColor="#670000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <!-- Nome -->
        <EditText
            android:id="@+id/editTextNome"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/seu_nome"
            android:inputType="text"
            android:paddingLeft="16dp" />

        <!-- Sobrenome -->
        <EditText
            android:id="@+id/editTextSobrenome"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/sobrenome"
            android:inputType="text"
            android:paddingLeft="16dp"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <!-- Email -->
    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:backgroundTint="@color/red"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/email"
        android:inputType="text|textEmailAddress"
        android:paddingLeft="16dp"
        android:layout_marginBottom="16dp" />

    <!-- CPF -->
    <EditText
        android:id="@+id/editTextCPF"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:backgroundTint="@color/red"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/cpf"
        android:inputType="number"
        android:paddingLeft="16dp"
        android:layout_marginBottom="16dp" />

    <!-- Telefone -->
    <EditText
        android:id="@+id/editTextTel"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:backgroundTint="@color/red"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/telefone"
        android:inputType="number"
        android:paddingLeft="16dp"
        android:layout_marginBottom="16dp" />

    <!-- Layout CNH e Validade -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <!-- CNH -->
        <EditText
            android:id="@+id/editTextCNH"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/cnh"
            android:inputType="datetime"
            android:paddingLeft="16dp" />

        <!-- Validade -->
        <EditText
            android:id="@+id/editTextValidade"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/validade_cnh"
            android:inputType="text"
            android:paddingLeft="16dp"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <!-- Criar sua senha -->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/criar_sua_senha"
        android:textAlignment="center"
        android:textColor="#670000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <!-- Digite sua senha -->
    <EditText
        android:id="@+id/editTextDigitaSenha"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:backgroundTint="@color/red"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/digite_sua_senha"
        android:inputType="text|textPassword"
        android:paddingLeft="16dp"
        android:layout_marginBottom="16dp" />

    <!-- Confirme sua senha -->
    <EditText
        android:id="@+id/editTextNovamente"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:backgroundTint="@color/red"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/confirme_sua_senha"
        android:inputType="text|textPassword"
        android:paddingLeft="16dp"
        android:layout_marginBottom="16dp" />

    <!-- Botão Continuar -->
    <Button
        android:id="@+id/btncContinuar"
        android:layout_width="239dp"
        android:layout_height="49dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/black"
        android:fontFamily="monospace"
        android:text="@string/continuar"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:layout_gravity="center"/>

</LinearLayout>