<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/caixaentradaemail"
        app:layout_constraintBottom_toBottomOf="@+id/btnemaillogin"
        app:layout_constraintEnd_toEndOf="@+id/btnemaillogin"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="@+id/btnemaillogin"
        app:layout_constraintTop_toTopOf="@+id/btnemaillogin"
        app:layout_constraintVertical_bias="0.562"
        app:srcCompat="@drawable/icon_mail"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/caixaentradasenha"
        app:layout_constraintBottom_toBottomOf="@+id/btnsenhalogin"
        app:layout_constraintEnd_toEndOf="@+id/btnsenhalogin"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="@+id/btnsenhalogin"
        app:layout_constraintTop_toTopOf="@+id/btnsenhalogin"
        app:layout_constraintVertical_bias="0.375"
        app:srcCompat="@drawable/icon_key" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="315dp"
        android:layout_height="27dp"
        android:fontFamily="monospace"
        android:text="@string/digite_sua_senha_login_passageiro"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/esqueceu_a_senha_clique_aqui"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.573" />

    <EditText
        android:id="@+id/btnemaillogin"
        android:layout_width="361dp"
        android:layout_height="49dp"
        android:background="@drawable/borda_arredondada"
        android:fontFamily="monospace"
        android:hint="@string/nome_exemplo_com"
        android:inputType="text|textEmailAddress"
        android:maxLength="40"
        android:paddingLeft="50dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.369" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="315dp"
        android:layout_height="27dp"
        android:fontFamily="monospace"
        android:text="@string/digite_seu_e_mail"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.319" />

    <EditText
        android:id="@+id/btnsenhalogin"
        android:layout_width="362dp"
        android:layout_height="51dp"
        android:background="@drawable/borda_arredondada"
        android:fontFamily="monospace"
        android:hint="@string/informar_senha"
        android:inputType="text|textPassword"
        android:maxLength="40"
        android:paddingLeft="50dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="329dp"
        android:layout_height="76dp"
        android:fontFamily="monospace"
        android:text="@string/entre_em_sua_conta_com_seus_dados"
        android:textAlignment="center"
        android:textColor="#670000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141" />

    <Button
        android:id="@+id/btncContinuar"
        android:layout_width="239dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/black"
        android:fontFamily="monospace"
        android:text="@string/continuar_login_passageiro"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74" />

</androidx.constraintlayout.widget.ConstraintLayout>