<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.perfil.InformacoesPessoaisActivity" >

    <View
        android:id="@+id/header"
        android:layout_width="423dp"
        android:layout_height="265dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ImagePassageiro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imgusuariosilva"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.315"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/TituloNomeUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/usu_rio_da_silva"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159" />


    <TextView
        android:id="@+id/PassageiroNome"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:background="@drawable/borda_edittext"
        android:backgroundTint="@color/cinza_mais_claro"
        android:fontFamily="monospace"
        android:padding="10dp"
        android:hint="@string/usu_rio_nome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538" />

    <TextView
        android:id="@+id/PassageiroTelefone"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:background="@drawable/borda_edittext"
        android:backgroundTint="@color/cinza_mais_claro"
        android:fontFamily="monospace"
        android:padding="10dp"
        android:hint="@string/_11_1411_telefone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.887" />

    <TextView
        android:id="@+id/PassageiroCPF"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:background="@drawable/borda_edittext"
        android:backgroundTint="@color/cinza_mais_claro"
        android:fontFamily="monospace"
        android:padding="10dp"
        android:hint="@string/_5_9_1_70_cpf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

    <TextView
        android:id="@+id/PassageiroEmail"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:background="@drawable/borda_edittext"
        android:backgroundTint="@color/cinza_mais_claro"
        android:fontFamily="monospace"
        android:padding="10dp"
        android:hint="@string/usuariodasilva_gmail_com_e_mail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.717" />

    <TextView
        android:id="@+id/PassageiroSobreNome"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:background="@drawable/borda_edittext"
        android:backgroundTint="@color/cinza_mais_claro"
        android:fontFamily="monospace"
        android:padding="10dp"
        android:hint="@string/da_silva_sobrenome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.627" />


</androidx.constraintlayout.widget.ConstraintLayout>

